# pyrite

./: README.md  pyproject.toml
pyrite/: ImageReader.py  Media.py  __init__.py
